index2.html add

--- a/index2.html
+++ b/index2.html
@@ -72,8 +72,13 @@
     </table>
     <h3>Q.8 Create radio button (MERN, MEAN : course)and checkbox(HTML, CSS, React, Node : technology) and explain the
         difference between these two </h3>
-    <input type="radio" name="stack" id="MERN"><label for="">MERN</label>
+    <input type="radio" name="stack" id="MERN"><label for="">MERN</label><br>
     <input type="radio" name="stack" id="MEAN"><label for="">MEAN</label>
+    <h3>Choose the Following</h3>
+    <input type="checkbox" name="html" id=""> <label for="">HTML</label><br>
+    <input type="checkbox" name="css" id=""> <label for="">CSS</label><br>
+    <input type="checkbox" name="React" id=""> <label for="">React</label><br>
+    <input type="checkbox" name="Node" id=""> <label for="">Node</label><br>
 </body>
 
 </html>
