--- a/index4.html
+++ b/index4.html
@@ -6,27 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day 4</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
     <h3>Q.1 Replicate the button on Masthead of PrepBytes</h3>
-    <input type="button" value="Enroll Now" class="button1">
-    <h3>Q.2 Write a text and add any google font</h3>
+    <br>
+    <input type="button" value="Enroll Now" class="button1"><br><br>
+    <h3>Q.2 Write a text and add any google font</h3><br>
     <p class="first">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta ratione nulla quos quasi officiis
         labore officia
         ducimus, libero blanditiis recusandae! Saepe, doloremque quod doloribus repudiandae quas dicta impedit
         perferendis ipsam.</p>
-    <h3>Q.3 create a box and increase its width on hover , add transition on hover</h3>
+        <br><br>
+    <h3>Q.3 create a box and increase its width on hover , add transition on hover</h3><br>
     <div class="div1">
         <p>Hello World</p>
     </div>
     <br>
     <h3>Q.4 Create a circle using border radius </h3>
-    <div class="div2"></div>
+    <div class="div2"></div><br>
     <h3>Q.5 Write code to show implementation of media queries</h3>
-    <h3>Write code to show any animation example</h3>
+        <p style="color: red;margin-left: 20px;"> To check media queries Please inspect the element</p>
+    <br><br>
+    <h3>Q.6 Write code to show any animation example</h3>
     <div class="div3"></div><br><br><br><br><br><br>
-    <h3>Q.6 Create masterhead - add background image and put a text at the center , with button below it </h3>
+    <h3>Q.6 Create masterhead - add background image and put a text at the center , with button below it </h3><br><br>
     <div class="master">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit error illum deleniti. Ad, nobis.</p>
         <input type="button" value="Click me" class="button2">
