index5.html add

--- a/index4.html
+++ b/index4.html
@@ -28,7 +28,7 @@
     <h3>Q.4 Create a circle using border radius </h3>
     <div class="div2"></div><br>
     <h3>Q.5 Write code to show implementation of media queries</h3>
-        <p style="color: red;margin-left: 20px;"> To check media queries Please inspect the element</p>
+        <p style="color: red;margin-left: 20px;"> To check media queries Please inspect the web page.</p>
     <br><br>
     <h3>Q.6 Write code to show any animation example</h3>
     <div class="div3"></div><br><br><br><br><br><br>
